--- a/html/contacto.html
+++ b/html/contacto.html
@@ -29,9 +29,9 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                  </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                      </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./nosotros.html">Nosotros</a>
                   </li>
@@ -70,7 +70,7 @@
 
     <main id="main">
 
-        <section id="banner">
+        <section class="banner">
             <img src="../img/banner-contacto.jpg" alt="banner">
         </section>
 
