--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <main id="main">
 
-        <section id="banner">
+        <section class="banner">
             <img src="img/banner.jpg" alt="impresion gran formato">
         </section>
 
