se reemplaza lorem de seccion nosotros

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -65,7 +65,9 @@
         </section>
         
         <section id="nosotros">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate veritatis consequatur ullam nisi fugit dolorem nesciunt. Delectus recusandae aspernatur sapiente laboriosam. Nostrum et alias nesciunt, itaque tempore cum aspernatur omnis dolore, beatae impedit vero nisi molestias fugit? Praesentium, dicta similique quam perferendis at assumenda doloribus soluta quas, velit beatae neque? Laboriosam explicabo, aspernatur atque libero possimus enim ipsum id sint.</p>
+            <p>
+                Somos una empresa de tecnología creada en 2015 que brinda soluciones gráficas de todo tipo a quien lo requiera, nuestros servicios van desde impresiones en gran y pequeño formato hasta el diseño de branding de tu empresa o diseño web, nuestra idea es crear una empresa de diseño integral que pueda satisfacer todas las necesidades gráficas que se pueda tener. Ya con 7 años en el mercado hemos logrado posicionarnos trabajando para el pequeño emprendedor hasta importantes marcas tanto nacionales como internacionales
+            </p>
         </section>
         
         <p class="parrafo">Marcas con las que trabajamos</p>
