--- a/html/productos.html
+++ b/html/productos.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="publicidad, grafica, vinilo, corporeo">
+    <meta name="description" content="Ofrecemos soluciones graficas, que necesitas imprimir hoy?.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
